--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,35 @@
         <artifactId>hadoop-core</artifactId>
         <version>1.0.4</version>
       </dependency>
+<dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+            <version>5.8.0</version>
+        </dependency>
+<dependency>
+    <groupId>xerces</groupId>
+    <artifactId>xercesImpl</artifactId>
+    <version>2.9.1</version>
+</dependency>
+<dependency>
+    <groupId>xalan</groupId>
+    <artifactId>xalan</artifactId>
+    <version>2.7.1</version>
+</dependency>
+            
+<dependency>
+	<groupId>activecluster</groupId>
+	<artifactId>activecluster</artifactId>
+	<version>4.0.2</version>
+</dependency>
+            
+<dependency>
+	<groupId>javacc</groupId>
+	<artifactId>javacc</artifactId>
+	<version>4.1</version>
+</dependency>
+            
+
 		<dependency>
 			<groupId>org.apache.hbase</groupId>
 			<artifactId>hbase</artifactId>
