--- a/pom.xml
+++ b/pom.xml
@@ -47,16 +47,19 @@
 			<id>clojars</id>
 			<url>http://clojars.org/repo</url>
 		</repository>
+		<repository>
+  <id>repository.jboss.org-public</id>
+  <name>JBoss repository</name>
+  <url>https://repository.jboss.org/nexus/content/groups/public</url>
+</repository>
 	</repositories>
 
 	<dependencies>
-		<dependency>
-			<groupId>jms</groupId>
-			<artifactId>jms</artifactId>
-			<version>1.1</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/jms.jar</systemPath>
-		</dependency>
+<dependency>
+	<groupId>javax.jms</groupId>
+	<artifactId>jms</artifactId>
+	<version>1.1</version>
+</dependency>
 		<dependency>
 			<groupId>storm</groupId>
 			<artifactId>storm</artifactId>
