--- a/pom.xml
+++ b/pom.xml
@@ -48,18 +48,23 @@
 			<url>http://clojars.org/repo</url>
 		</repository>
 		<repository>
-  <id>repository.jboss.org-public</id>
-  <name>JBoss repository</name>
-  <url>https://repository.jboss.org/nexus/content/groups/public</url>
-</repository>
+			<id>repository.jboss.org-public</id>
+			<name>JBoss repository</name>
+			<url>https://repository.jboss.org/nexus/content/groups/public</url>
+		</repository>
+		<repository>
+			<id>proton</id>
+			<name>activemq repository</name>
+			<url>http://repo.fusesource.com/nexus/content/groups/public/org/apache/qpid/proton-api/0.3.0-fuse-2/</url>
+		</repository>
 	</repositories>
 
 	<dependencies>
-<dependency>
-	<groupId>javax.jms</groupId>
-	<artifactId>jms</artifactId>
-	<version>1.1</version>
-</dependency>
+		<dependency>
+			<groupId>javax.jms</groupId>
+			<artifactId>jms</artifactId>
+			<version>1.1</version>
+		</dependency>
 		<dependency>
 			<groupId>storm</groupId>
 			<artifactId>storm</artifactId>
@@ -77,38 +82,38 @@
 			<version>1.2.17</version>
 		</dependency>
 		<dependency>
-        <groupId>org.apache.hadoop</groupId>
-        <artifactId>hadoop-core</artifactId>
-        <version>1.0.4</version>
-      </dependency>
-<dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-all</artifactId>
-            <version>5.8.0</version>
-        </dependency>
-<dependency>
-    <groupId>xerces</groupId>
-    <artifactId>xercesImpl</artifactId>
-    <version>2.9.1</version>
-</dependency>
-<dependency>
-    <groupId>xalan</groupId>
-    <artifactId>xalan</artifactId>
-    <version>2.7.1</version>
-</dependency>
-            
-<dependency>
-	<groupId>activecluster</groupId>
-	<artifactId>activecluster</artifactId>
-	<version>4.0.2</version>
-</dependency>
-            
-<dependency>
-	<groupId>javacc</groupId>
-	<artifactId>javacc</artifactId>
-	<version>4.1</version>
-</dependency>
-            
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-core</artifactId>
+			<version>1.0.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-all</artifactId>
+			<version>5.8.0</version>
+		</dependency>
+		<dependency>
+			<groupId>xerces</groupId>
+			<artifactId>xercesImpl</artifactId>
+			<version>2.9.1</version>
+		</dependency>
+		<dependency>
+			<groupId>xalan</groupId>
+			<artifactId>xalan</artifactId>
+			<version>2.7.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>activecluster</groupId>
+			<artifactId>activecluster</artifactId>
+			<version>4.0.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javacc</groupId>
+			<artifactId>javacc</artifactId>
+			<version>4.1</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.apache.hbase</groupId>
@@ -131,6 +136,13 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.5.8</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.6</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
